<resources>
    <string name="app_name">PizzaStore</string>
    <string name="pizza_image_resource">pizza</string>
    <string name="pizzaContentDescription">pizza</string>
    <string name="delivery_checkbox_label">Delivery</string>
    <string name="Add_Topping_Button_Label">Add Topping</string>
    <string name="Clear_Pizza_Button_Label">Clear Pizza</string>
    <string name="Checkout_Button_Label">Checkout</string>
    <string name="second_activity_title">Your Order</string>
    <string name="base_price">Base Price:</string>
    <string name="toppings">Toppings:</string>
    <string name="delivery_cost">Delivery Cost:</string>
    <string name="total">TOTAL:</string>
    <string name="finish">Finish</string>
    <string name="blank_amt">$</string>
</resources>
